Comes with a few fixes and updates.

Changed:
- Updated Create Big Cannons logo to new style
- Updated Ukrainian translation courtesy of kyryloborsch
- Updated Chinese (Simplified) translation courtesy of Yizhouuu
Fixed:
- Fixed cannon carriages being broken by projectiles
- Fixed first-person handle autocannon carriage movement jitter
- Fixed incorrect big cannon failure ponder text

5.5.1

Create Big Cannons 5.5.1. A few critical fixes for 5.5.0 as well as some code changes.

Added:
- Added version checks for compat mods on 1.18.2
[Development] - Added ability to get big cannon projectile from all big cannon projectile item stacks
Changed:
- Optimized entity bounds for big cannons and autocannons to optimize lighting
- Changed impact explosion queueing to better allow compatibility with Valkyrien Skies
- All Autocannon Recoil Springs on an autocannon now play the firing animation
 - Format for storing Autocannon Recoil Spring positions has changed, reassemble autocannons to fix any issues
- Registered custom shaders properly so that Create Big Cannons shaders don't cause logspam on crash
Fixed:
- Fixed Trinkets compat crashing
- Fixed gas mask overlay rendering as solid color when holding Just Enough Guns firearm
- Fixed entity culling for big cannons and autocannons
- Fixed entity lighting
- Fixed contraption vector transforms
- Fixed big cannon projectiles spawning too far from barrel
- Fixed autocannon assembly shooting projectiles the wrong way
 - Added assembly failure message
- Fixed Fluid Shell item filling
- Fixed tracer not rendering for Drop Mortar Shell
- Fixed initial projectile chunkloading breaking Valkyrien Skies Quick-Firing Breeches
- Fixed illegal autocannon connections on creative block placement
- Fixed cannon casting connecting blocks that shouldn't connect

===

5.5.0

"messi messi messi immens messi encara messi encara messi encara messi"
